# registrator-romania

./: .dockerignore  .env-examle  .gitattributes  .gitignore  Dockerfile  Dockerfile-v0  README.md  config.yml  docker-compose-v0.yml  docker-compose.yml  pyproject.toml  users.docx  users.xlsx
bindings/: Cargo.toml  pyproject.toml
bindings/src/: lib.rs
registrator_romania/: __main__.py  api_romania.py  db.py  new_request_registrator.py  setup.py  users.json
registrator_romania/backend/: strategies_registration.py  utils.py
registrator_romania/backend/api/: api_romania.py
registrator_romania/backend/database/: api.py  sqlalchemy_models.py
registrator_romania/backend/net/: __init__.py  aiohttp_ext.py  httpx_ext.py
registrator_romania/backend/proxies/: autopool.py
registrator_romania/backend/proxies/providers/: __init__.py  base.py  residental_proxies.py  server_proxies.py
registrator_romania/cli/: run.py  utils.py
registrator_romania/frontend/cli/: __main__.py  run.py  setup.py
registrator_romania/frontend/flet_app/: main.py
registrator_romania/frontend/telegram_bot/: __init__.py  alerting.py
scripts/: clean.py
