[tool.poetry]
name = "registrator-romania"
version = "0.1.0"
description = "Script what automaticly registrate users from google sheet on https://cetatenie.just.ro/programare-online/"
authors = ["devtolmachev <dev.tolmachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
apscheduler = "^3.10.4"
loguru = "^0.7.2"
envyaml = "^1.10.211231"
pandas = "^2.2.2"
bs4 = "^0.0.2"
lxml = "^5.2.2"
pypasser = "^0.0.5"
ua-generator = "^0.5.0"
pyjsparser = "^2.7.1"
openpyxl = "^3.1.5"
orjson = "^3.10.6"
python-dateutil = "^2.9.0.post0"
python-docx = "^1.1.2"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
click = "^8.1.7"
setuptools = "^71.1.0"
faker = "^26.0.0"
httpx = "^0.27.0"
flet = "^0.24.1"
uvloop = { version = "^0.20.0", markers = "platform_system != 'Windows'" }
winloop = { version = "^0.1.6", markers = "platform_system == 'Windows'" }
aiofiles = "^24.1.0"
maturin = {extras = ["zig"], version = "^1.7.4"}
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
