[package]
name = "bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bindings2"
crate-type = ["cdylib"]

[dependencies]
fastrand = "2.1.1"
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.9", features = ["full"] }
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["multipart", "blocking"] }
ua_generator = "0.5.1"
